--- a/streamerenv.ui
+++ b/streamerenv.ui
@@ -14,6 +14,13 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="2" rowspan="3">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Start</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="1">
     <widget class="QLabel" name="label">
      <property name="font">
@@ -28,25 +35,35 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="0" column="0" rowspan="6">
+    <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item row="5" column="1" colspan="2">
+    <widget class="QPlainTextEdit" name="plainTextEdit"/>
+   </item>
+   <item row="3" column="2">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="text">
+      <string>Stop</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Users Online: </string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="4">
-    <widget class="QListWidget" name="listWidget"/>
-   </item>
-   <item row="0" column="2" rowspan="3">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Start</string>
+   <item row="4" column="1" colspan="2">
+    <widget class="QSlider" name="horizontalSlider">
+     <property name="maximum">
+      <number>8</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
-   </item>
-   <item row="3" column="1" colspan="2">
-    <widget class="QPlainTextEdit" name="plainTextEdit"/>
    </item>
   </layout>
  </widget>
