--- a/streamerenv.ui
+++ b/streamerenv.ui
@@ -16,6 +16,9 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="2" rowspan="3">
     <widget class="QPushButton" name="pushButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Start</string>
      </property>
@@ -50,6 +53,9 @@
    </item>
    <item row="3" column="2">
     <widget class="QPushButton" name="pushButton_2">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Stop</string>
      </property>
@@ -64,6 +70,9 @@
    </item>
    <item row="4" column="1" colspan="2">
     <widget class="QSlider" name="horizontalSlider">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="maximum">
       <number>8</number>
      </property>
